fix position on small screens[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D menu position on small screens

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -55,7 +55,7 @@
         width: 200px;
         float: right;
         top: 15px;
-        position: fixed;
+
         right: 5px;
         padding-top: 60px;
         color: #fff;
@@ -73,6 +73,11 @@
     .navbar-dark .navbar-nav .nav-link:hover{
         color: #fff;
     }
+    #main_navbar{
+        position: fixed;
+        top:11px;
+        right: 5px;
+    }
 
 }
 @include media-breakpoint-down(sm) {
@@ -82,7 +87,7 @@
         width: 200px;
         float: right;
         top: 15px;
-        position: fixed;
+
         right: 5px;
         padding-top: 60px;
         color: #fff;
@@ -97,6 +102,12 @@
     .navbar-dark .navbar-nav .nav-link.active{
         color: #fff;
     }
+    #main_navbar{
+        position: fixed;
+        top:11px;
+        right: 5px;
+    }
+
 
 }
 footer {
